--- a/Craiyon.Net/Craiyon.Net.csproj
+++ b/Craiyon.Net/Craiyon.Net.csproj
@@ -8,7 +8,7 @@
     <Description>A .NET Wrapper over the Craiyon AI Image generation service.</Description>
     <Copyright>Sutinder S. Saini</Copyright>
     <PackageProjectUrl>https://github.com/sa111n111/Craiyon.Net</PackageProjectUrl>
-    <PackageIcon>a0d40d4796d9c1c462a7fb1ebb7b3166.jpg</PackageIcon>
+    <PackageIcon>icon.jpg</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/sa111n111/Craiyon.Net</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
@@ -18,15 +18,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\a0d40d4796d9c1c462a7fb1ebb7b3166.jpg">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
     <None Include="..\LICENSE.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
     <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\icon.jpg">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
