--- a/Craiyon.Net/Craiyon.Net.csproj
+++ b/Craiyon.Net/Craiyon.Net.csproj
@@ -15,6 +15,8 @@
     <PackAsTool>False</PackAsTool>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
+    <Title>DotNetCraiyon</Title>
+    <AssemblyName>DotNetCraiyon</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
