--- a/Craiyon.Net/Craiyon.Net.csproj
+++ b/Craiyon.Net/Craiyon.Net.csproj
@@ -17,6 +17,7 @@
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
     <Title>DotNetCraiyon</Title>
     <AssemblyName>DotNetCraiyon</AssemblyName>
+    <Version>2.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
